Prevent nav text wrapping

--- a/src/main/webapp/styletemplate.css
+++ b/src/main/webapp/styletemplate.css
@@ -70,7 +70,6 @@ body {
 
 
 .navsmall div {
-	width: 120px;
 	height: inherit;
 	
 	padding: 0px 10px;
@@ -79,6 +78,8 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	
+	white-space: nowrap;
 	
 	color: #aaa;
 }
@@ -97,7 +98,7 @@ body {
 	color: white;
 }
 
-@media screen and (max-width: 649px) and (min-width: 350px) {
+@media screen and (max-width: 649px) and (min-width: 450px) {
 	#navtitle {
 		display: none;
 	}
